# flashlog

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
decode/: decode.cc  decode_formatter.cc  decode_formatter.h
example/: CMakeLists.txt  crypto_example.cc  logger_example.cc  zstd_example.cc
logger/: CMakeLists.txt  internal_log.cc  internal_log.h  log_common.h  log_handle.cc  log_handle.h  log_msg.h  logger.h  scope_guard.h  space.h
logger/compress/: compress.h  zlib_compress.cc  zlib_compress.h  zstd_compress.cc  zstd_compress.h
logger/crypto/: aes_crypto.cc  aes_crypto.h  crypto.cc  crypto.h
logger/formatter/: default_formatter.cc  default_formatter.h  effective_formatter.cc  effective_formatter.h  formatter.h
logger/handler/: log_factory.h  log_handle.cc  log_handle.h  log_variadic_handle.h
logger/mmap/: memory_buffer.cc  memory_buffer.h  mmap_aux.cc  mmap_aux.h  mmap_aux_linux.cc  mmap_aux_win.cc
logger/proto/: person.pb.cc  person.pb.h
logger/scheduler/: scheduler.cc  scheduler.h  thread_pool.cc  thread_pool.h
logger/sinks/: async_sink.cc  async_sink.h  compress_sink.cc  compress_sink.h  console_sink.cc  console_sink.h  crypto_sink.cc  crypto_sink.h  effective_sink.cc  effective_sink.h  mmap_sink.cc  mmap_sink.h  protobuf_sink.cc  protobuf_sink.h  simple_sink.cc  simple_sink.h  sink.h
logger/utils/: file_util.cc  file_util.h  sys_util.h  sys_util_linux.cc  sys_util_mac.cc  sys_util_win.cc  timer_count.h
script/: build_linux.py  build_mac.py  build_windows.py
src/: gtest_mmap.cc  gtest_space.cc  gtest_third_party.cc  gtest_threadpool.cc  main.cpp
test/: log.txt
